Add filter when scanning filesystem and http sources